--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
-<!-- Welcome to {{title}}
-Hello {{user}}
 
-{{product1.productName}}
+<div class="container">
+    <app-navi></app-navi>
+    <div class="row">
+        <div class="col-md-4">
+            <app-category></app-category>
+        </div>
+        <div class="col-md-8">
+            <app-product></app-product>
+        </div>
+    </div>
+    <router-outlet></router-outlet>
+</div>
 
-<ul>
-    <li *ngFor="let product of products">{{product.productName}}</li>
-</ul> -->
-
-<app-navi></app-navi>
-<app-category></app-category>
-<app-product></app-product>
-<router-outlet></router-outlet>
 
