--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,9 +1,22 @@
-<table class="table">
+<div *ngIf="dataLoaded == false" class="spinner-border text-warning" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  
+<table *ngIf="dataLoaded == true" class="table">
+    <thead>
+        <tr>
+            <th style="text-align: center;">Id</th>
+            <th style="text-align: center;">Ürün Adı</th>
+            <th style="text-align: center;">Kategori</th>
+            <th style="text-align: center;">Fiyat</th>
+            <th style="text-align: center;">Stok Adedi</th>
+        </tr>
+    </thead>
     <tr *ngFor="let product of products">
-        <td>{{product.productId}}</td>
-        <td>{{product.productName}}</td>
-        <td>{{product.categoryId}}</td>
-        <td>{{product.unitPrice}}</td>
-        <td>{{product.unitsInStock}}</td>
+        <td style="text-align: center;">{{product.productId}}</td>
+        <td style="text-align: left;">{{product.productName}}</td>
+        <td style="text-align: center;">{{product.categoryId}}</td>
+        <td style="text-align: center;">{{product.unitPrice}}</td>
+        <td style="text-align: center;">{{product.unitsInStock}}</td>
     </tr>
 </table>
