--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,7 +1,4 @@
-<ul class="list-group">
-    <li class="list-group-item">An item</li>
-    <li class="list-group-item">A second item</li>
-    <li class="list-group-item">A third item</li>
-    <li class="list-group-item">A fourth item</li>
-    <li class="list-group-item">And a fifth one</li>
+ <h5 style="text-align: center;">CATEGORIES</h5>
+  <ul class="list-group">
+    <li *ngFor="let category of categories" class="list-group-item">{{category.categoryName}}</li>
   </ul>
