--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,4 +1,7 @@
  <h5 style="text-align: center;">CATEGORIES</h5>
   <ul class="list-group">
-    <li *ngFor="let category of categories" class="list-group-item">{{category.categoryName}}</li>
+    <li (click)="setCurrentCategory(category)"
+    routerLink = "/products/category/{{category.categoryId}}"
+    *ngFor="let category of categories" 
+    [class] ="getCurrentCategoryClass(category)">{{category.categoryName}}</li>
   </ul>
