list of products by category id

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -5,7 +5,7 @@
 <table *ngIf="dataLoaded == true" class="table">
     <thead>
         <tr>
-            <th style="text-align: center;">Id</th>
+            <!-- <th style="text-align: center;">Id</th> -->
             <th style="text-align: center;">Ürün Adı</th>
             <th style="text-align: center;">Kategori</th>
             <th style="text-align: center;">Fiyat</th>
@@ -13,7 +13,7 @@
         </tr>
     </thead>
     <tr *ngFor="let product of products">
-        <td style="text-align: center;">{{product.productId}}</td>
+        <!-- <td style="text-align: center;">{{product.productId}}</td> -->
         <td style="text-align: left;">{{product.productName}}</td>
         <td style="text-align: center;">{{product.categoryId}}</td>
         <td style="text-align: center;">{{product.unitPrice}}</td>
