--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,7 +1,14 @@
  <h5 style="text-align: center;">CATEGORIES</h5>
   <ul class="list-group">
+    <li
+    (click)="setCurrentCategoryNull()"
+    [class] ="getAllCategoryClass()" 
+    routerLink = "/products" >Tüm Ürünler
+    </li>
+
     <li (click)="setCurrentCategory(category)"
     routerLink = "/products/category/{{category.categoryId}}"
     *ngFor="let category of categories" 
-    [class] ="getCurrentCategoryClass(category)">{{category.categoryName}}</li>
+    [class] ="getCurrentCategoryClass(category)">{{category.categoryName}}
+    </li>
   </ul>
