--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,4 +1,4 @@
- <h5 style="text-align: center;">CATEGORIES</h5>
+ <h5 style="text-align: center;">Kategoriler</h5>
   <ul class="list-group">
     <li
     (click)="setCurrentCategoryNull()"
