--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -25,7 +25,7 @@
     <div class="form-check text-start my-3">
       <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
       <label class="form-check-label" for="flexCheckDefault">
-        Remember me
+        Beni Hatırla
       </label>
     </div>
     <button (click)="login()" class="btn btn-primary w-100 py-2">Giriş Yap</button>
